--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
-# references:
-# * https://www.objc.io/issues/6-build-tools/travis-ci/
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+osx_image: xcode10.2
+before_install:
+  - gem install cocoapods -v '1.7.1'
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/Hash.xcworkspace -scheme Hash-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+  - gem install travis
+  - travis lint .travis.yml --no-interactive
+  - xcodebuild clean build test -workspace Example/Connectivity.xcworkspace -scheme Connectivity-Example -destination "platform=iOS Simulator,name=iPhone X" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO | xcpretty
+  - pod lib lint
