--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ script:
   - gem install travis
   - travis lint .travis.yml --no-interactive
   - xcodebuild clean build test -workspace Example/Connectivity.xcworkspace -scheme Connectivity-Example -destination "platform=iOS Simulator,name=iPhone X" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO | xcpretty
-  - pod lib lint
+  - pod lib lint --allow-warnings
